# DjangoAdminTGBot

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
src/: db.sqlite3
src/app/: settings.py
src/bot/: apps.py  bot.py  models.py  signals.py  utils.py
src/bot/management/commands/: start_bot.py
src/bot/migrations/: 0001_initial.py
