[project]
name = "tgbottestwork"
version = "0.1.0"
description = ""
authors = [
    {name = "BakeNecko",email = "bake.necko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "pytelegrambotapi (>=4.27.0,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "supervisor (>=4.2.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
